# EC-mockup

./: .env.example  .gitignore  README.md  ec-mockup-gui.spec  ec-mockup.spec  pyproject.toml
config/: mock-site.yaml.example
debug/: check_all_categories.py  check_api_categories.py  check_api_data.py  check_image.py  check_prices.py  check_prices2.py  check_products.py  debug_strip.py  test_api_full_fields.py  test_debug_steps.py  test_detailed.py  test_get_categories.py  test_get_product_category.py  test_import_makeshop.py  test_makeshop_api.py  test_pattern.py  test_real.py  test_regex.py  test_search_all.py  test_search_category.py
docs/: 01_ローカルモック生成ツール構想.md  02_プロジェクト計画書.md  03_env仕様書.md  04_CLI仕様_LiveSiteInspector.md  05_実装手順書_一覧.md  06_実装手順書_Phase0_計画設計.md  07_実装手順書_Phase1_CLI基盤構築.md  08_実装手順書_Phase2_入力取得機能実装.md  09_実装手順書_Phase3_静的サイト生成.md  11_実装手順書_Phase5_GUI対応.md  12_実装手順書_Phase6_配布対応.md  CLI仕様_LiveSiteInspector.md  env仕様書.md  プロジェクト計画書.md  ローカルモック生成ツール構想.md  実装手順書_Phase0_計画設計.md  実装手順書_Phase1_CLI基盤構築.md  実装手順書_Phase2_入力取得機能実装.md  実装手順書_Phase3_静的サイト生成.md  実装手順書_Phase4_検証安定化.md  実装手順書_Phase5_GUI対応.md  実装手順書_Phase6_配布対応.md  実装手順書_一覧.md
docs/assets/: generate_data_flow_svg.py
src/builder/: models.py  normalizer.py  renderer.py  static_builder.py
src/cli/: main.py
src/config/: loader.py
src/fetchers/: data_exporter.py  image_fetcher.py  live_site_inspector.py  makeshop_client_local.py  mssql_fetcher.py  source_fetcher.py
src/gui/: app.py
src/usecase/: runner.py
src/utils/: dirs.py  (+1 more)
tests/: test_builder.py  test_config.py  test_logger.py
(+6 files in other folders)
